.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

New Features:

  * util-core: Introduced a positional `Buf` API, `Buf.Indexed`, and retrofitted
    all existing implementations in util and finagle to adopt it. It is now used
    throughout for a reductions in allocation and latency. In two services at
    Twitter we saw a 1–2% reduction in allocations. We plan to open the API to
    the public and make it a part of `Buf` once we are confident in the APIs.
    ``RB_ID=904559`` ``RB_ID=905253`` ``RB_ID=906201``

  * util-slf4j-api: Introduce slf4j-api support into util. This includes a
    small scala wrapper over the `org.slf4j.Logger` and a scala-friendly
    `Logging` trait. Changes also include the util-slf4j-jul-bridge module which
    is a library that provides a utility to "smartly" install the
    Slf4jBridgeHandler. ``RB_ID=900815``

Runtime Behavior Changes:

  * util-core: Improved performance and allocation rates of some "random access"
    `Buf` operations. ``RB_ID=905253``

  * util-core: Standardized argument checking in implementations of
    `c.t.io.Buf.write` and `c.t.io.Buf.slice`. ``RB_ID=899935``

API Changes:

  * util-core: Deprecated `c.t.io.ConcatBuf` which is replaced by
    `c.t.io.Buf.apply(IndexedSeq[Buf])`. ``RB_ID=899623``

6.40.0  2016-12-20

Bug Fixes:

  * util-core: Fix issue with c.t.concurrent.AsyncStream.mapConcurrent which
    will cause the stream head to be held for life of operation. ``RB_ID=896168``
    
API Changes:

  * util-core: Deprecated charset constants in `c.t.io.Charsets` have been
    removed. Use java.nio.charset.StandardCharsets instead. ``RB_ID=893542``

  * util-core: `com.twitter.util.NonFatal` is deprecated, use
    `scala.util.control.NonFatal` instead. ``RB_ID=892475``
